--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://node_2d.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://enemy_barkwing.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/enemy/", "res://assets/sprites/enemy/mushi/", "res://assets/sprites/enemy/barkwing/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -24,35 +24,35 @@ dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (268)"
+dock_5="Inspector,Node,History,Commit (49)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/main/scene/nyoba.tscn", "res://Shared/castle_map/scene/castle_map 2.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/castle_map/scene/awan_besar.tscn", "res://Shared/castle_map/scene/fog.tscn", "res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray("res://Shared/main/scene/nyoba.tscn", "res://Shared/castle_map/scene/castle_map 2.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/castle_map/scene/awan_besar.tscn", "res://Shared/castle_map/scene/fog.tscn", "res://enemy_mushi.tscn", "res://enemy_barkwing.tscn")
+current_scene="res://Shared/main/scene/nyoba.tscn"
 center_split_offset=-269
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://barrel.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
-selected_script="res://barrel.gd"
+open_scripts=["res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_mushi.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
+selected_script="res://enemy_barkwing.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.28571
 
 [GameView]
 
-floating_window_rect=Rect2i(314, 109, 1292, 767)
+floating_window_rect=Rect2i(634, 283, 1292, 767)
 floating_window_screen=0
 
 [ShaderEditor]
