done masukin boss room sama castle
blm bikin moving platform, lava

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,16 +2,16 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/asset/torch_big/torch_big_background.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/main/asset/torch_big/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://Shared/castle_map/", "res://Shared/castle_map/scene/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/")
-dock_node_current_tab=1
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/boss_room/scene/boss_room.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/main/asset/torch_big/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://Shared/caveone_map/scene/", "res://Shared/castle_map/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/")
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -24,15 +24,16 @@ dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (46)"
+dock_5="Inspector,Node,History,Commit (39)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://enemy_mushi.tscn", "res://enemy_barkwing.tscn", "res://torch.tscn")
-current_scene="res://Shared/main/scene/Castle.tscn"
+open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn")
+current_scene="res://Shared/boss_room/scene/boss_room.tscn"
 center_split_offset=-424
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -42,8 +43,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Shared/main/scene/area_2d.gd", "res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_mushi.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
-selected_script=""
+open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_mushi.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
+selected_script="res://Shared/main/scene/area_2d_castle.gd"
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
