--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/boss_room/scene/boss_room.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/main/asset/torch_big/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://Shared/caveone_map/scene/", "res://Shared/castle_map/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/")
+dock_filesystem_selected_paths=PackedStringArray("res://card_projectile.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/main/asset/torch_big/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/", "res://Shared/caveone_map/scene/", "res://Shared/castle_map/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://assets/", "res://assets/sprites/", "res://assets/sprites/enemy/", "res://assets/sprites/enemy/mushi/", "res://assets/sprites/enemy/barkwing/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -24,35 +24,35 @@ dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (4)"
+dock_5="Inspector,Node,History,Commit (40)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn")
-current_scene="res://Shared/main/scene/Castle.tscn"
-center_split_offset=-424
+open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/castle_map/scene/castle_map.tscn", "res://Shared/caveone_map/scene/caveone_map.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://Shared/cavethree_map/scene/cavethree_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://card_projectile.tscn", "res://enemy_mushi.tscn", "res://enemy_base.tscn", "res://enemy_cloverknight.tscn", "res://enemy_barkwing.tscn")
+current_scene="res://enemy_cloverknight.tscn"
+center_split_offset=-445
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_mushi.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
-selected_script="res://Shared/main/scene/area_2d_castle.gd"
+open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://barrel.gd", "res://card.gd", "res://card_projectile.gd", "res://enemy_barkwing.gd", "res://enemy_cloverknight.gd", "res://enemy_mushi.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd"]
+selected_script=""
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=0.999997
+zoom_factor=1.07143
 
 [GameView]
 
-floating_window_rect=Rect2i(314, 109, 1292, 767)
+floating_window_rect=Rect2i(634, 283, 1292, 767)
 floating_window_screen=0
 
 [ShaderEditor]
