--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -77,16 +77,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 346,
-"scroll_position": 322.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 346,
+"row": 247,
+"scroll_position": 234.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 15.0,
+"row": 137,
+"scroll_position": 113.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -154,8 +150,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 9.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 327,
-"scroll_position": 303.0,
+"row": 253,
+"scroll_position": 253.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
