Ini versi gw (biar ga ilang)

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -155,12 +155,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 27,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 388,
-"scroll_position": 9.0,
-"selection": false,
+"h_scroll_position": 10,
+"row": 375,
+"scroll_position": 369.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 375,
+"selection_to_column": 27,
+"selection_to_line": 375,
 "syntax_highlighter": "GDScript"
 }
 
