--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://asset/press_start_2p (1)/PressStart2P.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/scene/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://scene/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/", "res://asset/", "res://asset/press_start_2p (1)/")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/scene/Surface.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/scene/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://scene/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/", "res://asset/", "res://asset/press_start_2p (1)/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -24,16 +24,15 @@ dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (234)"
+dock_5="Inspector,Node,History,Commit (8)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://Shared/main/scene/moving_platform_castle.tscn", "res://scene/nyoba_scene.tscn", "res://scene/blackjack_background_2.tscn", "res://scene/main menu.tscn")
-current_scene="res://Shared/main/scene/CaveOne.tscn"
+current_scene="res://Shared/main/scene/Surface.tscn"
 center_split_offset=-424
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [EditorWindow]
 
