--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/scene/Surface.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/nyoba_scene.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://Shared/character_test/scene/", "res://Shared/cavethree_map/scene/", "res://Shared/caveone_map/scene/", "res://Shared/boss_room/", "res://Shared/boss_room/scene/", "res://scene/", "res://assets/sprites/", "res://assets/sprites/enemy/mushi/", "res://asset/", "res://asset/press_start_2p (1)/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -24,15 +24,16 @@ dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (8)"
+dock_5="Inspector,Node,History,Commit (46)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://Shared/main/scene/moving_platform_castle.tscn", "res://scene/nyoba_scene.tscn", "res://scene/blackjack_background_2.tscn", "res://scene/main menu.tscn")
+open_scenes=PackedStringArray("res://scene/nyoba_scene.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://Shared/main/scene/moving_platform_castle.tscn", "res://scene/blackjack_background_2.tscn", "res://scene/main menu.tscn")
 current_scene="res://Shared/main/scene/Surface.tscn"
 center_split_offset=-424
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -42,8 +43,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://Shared/main/scene/area_2d_caveone.gd", "res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_mushi.gd", "res://scene/main_game.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd", "res://Shared/main/scene/surface.gd"]
-selected_script="res://scene/main_game.gd"
+open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://Shared/main/scene/area_2d_caveone.gd", "res://barrel.gd", "res://enemy_barkwing.gd", "res://enemy_cloverknight.gd", "res://enemy_mushi.gd", "res://scene/main_game.gd", "res://Shared/castle_map/scene/parallax_2d_3.gd", "res://Shared/castle_map/scene/parallax_layer.gd", "res://Shared/character_test/script/player.gd", "res://Shared/main/scene/surface.gd"]
+selected_script="res://Shared/main/scene/surface.gd"
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
