--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -8,11 +8,7 @@ state={
 "h_scroll_position": 0,
 "row": 207,
 "scroll_position": 204.0,
-"selection": true,
-"selection_from_column": 14,
-"selection_from_line": 207,
-"selection_to_column": 15,
-"selection_to_line": 207,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -68,11 +64,7 @@ state={
 "h_scroll_position": 0,
 "row": 34,
 "scroll_position": 20.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 34,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -84,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 96.0,
+"row": 258,
+"scroll_position": 287.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -128,11 +120,7 @@ state={
 "h_scroll_position": 0,
 "row": 14,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 14,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -157,9 +145,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 27,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 10,
+"h_scroll_position": 0,
 "row": 375,
-"scroll_position": 369.0,
+"scroll_position": 364.0,
 "selection": true,
 "selection_from_column": 25,
 "selection_from_line": 375,
@@ -173,11 +161,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 39,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 198,
-"row": 69,
-"scroll_position": 69.0,
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 7.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://enemy_cloverknight.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 305,
+"scroll_position": 313.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
