--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,16 +143,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 375,
-"scroll_position": 364.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 375,
-"selection_to_column": 27,
-"selection_to_line": 375,
+"row": 277,
+"scroll_position": 270.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -161,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 7.0,
+"row": 18,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
