oke kayanya ini yg bener

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History,Commit (2)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/nyoba_scene.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://scene/blackjack_background_2.tscn", "res://scene/main menu.tscn")
-current_scene="res://scene/nyoba_scene.tscn"
+open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://scene/nyoba_scene.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://Shared/cavetwo_map/scene/cavetwo_map.tscn", "res://main_character.tscn", "res://Shared/boss_room/scene/boss_room.tscn", "res://scene/blackjack_background_2.tscn")
+current_scene="res://scene/main menu.tscn"
 center_split_offset=-424
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
