--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,9 +10,9 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEAD<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main_character.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://scene/")
 dock_node_current_tab=0
-dock_filesystem_selected_paths=PackedStringArray("res://scene/main menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/scene/CaveOne.tscn")
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -25,15 +25,16 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (13)"
+dock_5="Inspector,Node,History,Commit (25)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/main/scene/main_map.tscn", "res://Shared/main/scene/Surface.tscn", "res://scene/main menu.tscn")
-current_scene="res://scene/main menu.tscn"
+open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://scene/nyoba_scene.tscn")
+current_scene="res://scene/nyoba_scene.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,8 +44,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Shared/main/scene/area_2d_castle.gd", "res://scene/main_game.gd", "res://scene/main_menu.gd", "res://Shared/main/scene/surface.gd"]
+selected_script="res://Shared/main/scene/surface.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -52,8 +53,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(314, 109, 1292, 767)
+floating_window_screen=0
 
 [ShaderEditor]
 
