--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEAD<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main_character.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://scene/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://scene/")
 dock_node_current_tab=0
 dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/scene/CaveOne.tscn")
 dock_history_include_scene=true
@@ -25,12 +25,12 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (25)"
+dock_5="Inspector,Node,History,Commit (3)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://scene/nyoba_scene.tscn")
-current_scene="res://scene/nyoba_scene.tscn"
+open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://scene/nyoba_scene.tscn", "res://Shared/main/scene/cave.tscn", "res://Shared/main/scene/caveone_map.tscn", "res://Shared/main/scene/CaveOne.tscn")
+current_scene="res://Shared/main/scene/CaveOne.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
