--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEAD<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main_character.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/main/", "res://Shared/main/scene/", "res://Shared/main/asset/", "res://scene/")
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_filesystem_selected_paths=PackedStringArray("res://Shared/main/scene/CaveOne.tscn")
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -25,15 +25,15 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (3)"
+dock_5="Inspector,Node,History,Commit (6)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://scene/nyoba_scene.tscn", "res://Shared/main/scene/cave.tscn", "res://Shared/main/scene/caveone_map.tscn", "res://Shared/main/scene/CaveOne.tscn")
-current_scene="res://Shared/main/scene/CaveOne.tscn"
+open_scenes=PackedStringArray("res://scene/main menu.tscn", "res://Shared/main/scene/Surface.tscn", "res://Shared/main/scene/Castle.tscn", "res://Shared/main/scene/CaveOne.tscn", "res://scene/nyoba_scene.tscn", "res://main_character.tscn")
+current_scene="res://Shared/main/scene/Castle.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,8 +44,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Shared/main/scene/area_2d_castle.gd", "res://scene/main_game.gd", "res://scene/main_menu.gd", "res://Shared/main/scene/surface.gd"]
-selected_script="res://Shared/main/scene/surface.gd"
+open_scripts=["res://Shared/main/scene/area_2d.gd", "res://Shared/main/scene/area_2d_castle.gd", "res://Shared/main/scene/area_2d_caveone.gd", "res://scene/main_game.gd", "res://scene/main_menu.gd", "res://Shared/main/scene/surface.gd"]
+selected_script="res://Shared/main/scene/area_2d_castle.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
