--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 5.0,
-"selection": false,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 4,
+"selection_to_column": 71,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -62,12 +66,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(320),
+"breakpoints": PackedInt32Array(317),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 73.0,
+"row": 317,
+"scroll_position": 308.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -187,7 +191,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
-"scroll_position": 6.0,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,16 +215,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 66,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 13,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 38,
-"selection_from_line": 3,
-"selection_to_column": 66,
-"selection_to_line": 3,
+"selection_from_column": 0,
+"selection_from_line": 13,
+"selection_to_column": 51,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -297,10 +301,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -315,7 +319,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 52,
-"scroll_position": 36.0,
+"scroll_position": 35.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -371,7 +375,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 0.0,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -386,6 +390,38 @@ state={
 "h_scroll_position": 0,
 "row": 6,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Pause.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 40,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 20,
+"selection_to_column": 40,
+"selection_to_line": 20,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Shared/boss_jatuh/script/boss_play.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 41,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
